simple/test/features/errors/semantic/e1060_invalid_const_expression.spl
# E1060: Invalid Const Expression

Feature: E1060 - Expression Not Valid in Const Context
  As a Simple compiler
  I want to detect non-const expressions in const contexts
  So that only compile-time evaluable expressions are used

  Background:
    Given I have the Simple compiler

  Scenario: Function call in const
    When I compile:
      '''
      fn get_value() -> i32:
        42

      const X: i32 = get_value()  # Error: function call not const
      '''
    Then I should see error E1060 at line 4
    And the error message should be "expression is not valid in const context: {message}"
    And the label should indicate "not const-compatible"
    And the help should suggest "only certain operations are allowed in const expressions"

  Scenario: Mutable operation in const
    When I compile:
      '''
      const X: i32:
        var y = 0  # Error: var not allowed in const
        y + 1
      '''
    Then I should see error E1060

  Scenario: Valid const expression
    When I compile:
      '''
      const X: i32 = 42
      const Y: i32 = X + 1  # OK: arithmetic on consts
      const Z: i32 = if true: 1 else: 2  # OK: const if
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn get_value() -> i32:
        42

      const X: i32 = get_value()
      '''
    Then I should see error E1060
    And the error message should contain "잘못된 상수 표현식"
